<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/_20dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_100dp"
        android:text="@string/login"
        android:fontFamily="@font/bold"
        android:textAppearance="@style/titleTextAppearance"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginTop="@dimen/_50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:textSize="15sp"
            android:paddingLeft="@dimen/_20dp"
            android:drawableEnd="@null"
            android:paddingRight="@dimen/_20dp"
            android:textColor="@color/mainText"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/reguler"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <TextView
            android:id="@+id/text_email_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_error"
            android:visibility="gone"
            android:fontFamily="@font/reguler"
            android:textColor="@color/primary"
            android:textSize="11sp"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:textColor="@color/mainText"
            android:drawableEnd="@null"
            android:paddingStart="@dimen/_20dp"
            android:paddingEnd="@dimen/_20dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/reguler"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />
        <TextView
            android:id="@+id/text_password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_error"
            android:visibility="gone"
            android:fontFamily="@font/reguler"
            android:textColor="@color/primary"
            android:textSize="11sp"
            android:layout_marginTop="5dp"
            />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.Primary"
            android:text="@string/login"
            android:layout_marginTop="40dp"
            android:elevation="10dp"
            />


        <LinearLayout
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/reguler"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/mainText"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/reguler"
                android:text="@string/sign_up"
                android:textColor="@color/primary"
                android:textSize="14sp"
                android:background="?selectableItemBackground"
                />
        </LinearLayout>

    </LinearLayout>
    <include
        android:id="@+id/loading_layout"
        layout="@layout/layout_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>